Java 17 upgrade; fix deprecations